fixes offset padding when element not yet visible

--- a/index.css
+++ b/index.css
@@ -146,6 +146,10 @@ p {
   font-family: "Overpass", sans-serif;
 }
 
+.saved:empty {
+  display:none;
+}
+
 .whole-container {
   height: auto;
   width: 300px;
